# edlib-rs

./: .gitignore  Cargo.toml  README.md  build.rs  wrapper.h
examples/: edaligner.rs
src/: edlib.rs  edlibrs.rs  lib.rs
