[package]
name = "edlib_rs"
version = "0.1.1"
authors = ["jeanpierre.both@gmail.com"]
edition = "2018"
build = "build.rs"
license = "MIT/Apache-2.0"
keywords = ["ffi", "bindings", "edlib"]
repository = "https://github.com/jean-pierreBoth/edlib-rs"
documentation = "https://docs.rs/edlib_rs"
description = "A rust interface to the C++ edlib library"

[lib]
lib = "edlib_rs"
path = "src/lib.rs"

[build-dependencies]
bindgen = "0.55.1"

[[examples]]
name = "edaligner"
path = "examples/edaligner.rs"

[dependencies]

lazy_static = { version = "1.4", doc = false}

# for examples we need the following
clap = {version = "2.33", doc = false}
needletail = {version = "0.4", doc = false}
cpu-time = {version = "1.0", doc = false}

# decreasing order of log for debug build : (max_level_)trace debug info warn error off
# decreasing order of log for release build (release_max_level_)  .. idem
log = { version = "0.4", features = ["max_level_trace", "release_max_level_info"] }
env_logger = { version = "0.7"}
